# davinci-suite-scripts

./: .gitignore  CHANGELOG.md  Install.bat  Install.command  README.md  ResolveProductionSuite-Setup.spec  build.py  build_installer.py  build_release.sh  install.ps1  install.sh  installer.py  installer_gui.py  package_release.py  version.json
.build_venv/: pyvenv.cfg
docs/: INSTALL.md  QUICKSTART.md  TROUBLESHOOTING.md  USER_GUIDE.md  V2_DESIGN.md
presets/: delivery_pack.example.json
products/: install_template.sh
products/t10_brand_drift_detector/: README.md  install.sh  pyproject.toml  run_tool.py
products/t10_brand_drift_detector/tools/: t10_brand_drift_detector.py
products/t1_revision_resolver/: README.md  install.sh  pyproject.toml  run_tool.py
products/t1_revision_resolver/core/: config.py  presets.py
products/t1_revision_resolver/tools/: t1_revision_resolver.py
products/t2_relink_across_projects/: README.md  install.sh  pyproject.toml  run_tool.py
products/t2_relink_across_projects/core/: fs.py  packs.py
products/t2_relink_across_projects/presets/: mapping_pack.example.json
products/t3_smart_reframer/: README.md  install.sh  pyproject.toml  run_tool.py
products/t4_caption_layout_protector/: README.md  install.sh  pyproject.toml  run_tool.py
products/t4_caption_layout_protector/core/: similarity.py
products/t4_caption_layout_protector/tools/: t4_caption_layout_protector.py  utils.py
products/t5_feedback_compiler/: README.md  install.sh  pyproject.toml  run_tool.py
products/t5_feedback_compiler/core/: __init__.py
products/t5_feedback_compiler/resolve/: navigation_helpers.py
products/t5_feedback_compiler/schemas/: brand_pack.schema.json
products/t6_timeline_normalizer/: README.md  install.sh  pyproject.toml  run_tool.py
products/t6_timeline_normalizer/tools/: t6_timeline_normalizer.py
products/t7_component_graphics/: README.md  install.sh  pyproject.toml  run_tool.py
products/t7_component_graphics/core/: jsonschema.py  reports.py  transactions.py
products/t7_component_graphics/schemas/: mapping_pack.schema.json
products/t8_delivery_spec_enforcer/: LICENSE  README.md  install.sh  pyproject.toml  run_tool.py
products/t8_delivery_spec_enforcer/core/: logging.py
products/t8_delivery_spec_enforcer/tools/: base.py
products/t9_change_impact_analyzer/: README.md  install.sh  pyproject.toml  run_tool.py
products/t9_change_impact_analyzer/resolve/: __init__.py  limitations.py
products/t9_change_impact_analyzer/sample_data/: options.json
releases/Windows/: CLICK_ME_FIRST.bat  README.txt  installer.py
releases/Windows/cli/: main.py
releases/Windows/docs/: ARCHITECTURE.md  DEMO.md  QUICKSTART.md  ROADMAP.md  TROUBLESHOOTING.md  USER_GUIDE.md
releases/Windows/presets/: brand_pack.example.json
releases/Windows/sample_data/: feedback.txt  options_t10.json  options_t2.json  options_t6.json  options_t7.json
releases/Windows/scripts/: demo_runner.py  generate_sample_packs.py  push_release.py  setup_product_installers.py  update_checker.py
releases/Windows/tools/: t2_relink_across_projects.py  t3_smart_reframer.py  t5_feedback_compiler.py  t7_component_graphics.py  t9_change_impact_analyzer.py
releases/Windows/ui/: __init__.py
releases/macOS/: DOUBLE_CLICK_ME.command  README.txt  installer.py  pyproject.toml
releases/macOS/cli/: entrypoints.py  main.py
releases/macOS/core/: config.py
releases/macOS/docs/: INSTALL.md  PRODUCTS.md  STANDALONE_SCRIPTS.md  TEST_PLAN.md  UNSIGNED_SCRIPTS.md  USER_GUIDE.md
releases/macOS/sample_data/: options_t3.json  options_t4.json  options_t8.json
releases/macOS/schemas/: delivery_pack.schema.json
releases/macOS/scripts/: sign_windows.ps1
releases/macOS/tools/: registry.py
releases/macOS/ui/: app.py
resolve/: resolve_api.py
sample_data/: captions.srt  options_t1.json  options_t5.json
scripts/: health_check.py
standalone_scripts/: t10_brand_drift_detector.py  t1_revision_resolver.py  t2_relink_across_projects.py  t3_smart_reframer.py  t4_caption_layout_protector.py  t5_feedback_compiler.py  t6_timeline_normalizer.py  t7_component_graphics.py  t8_delivery_spec_enforcer.py  t9_change_impact_analyzer.py
tools/: __init__.py  t8_delivery_spec_enforcer.py
ui/: app.py
