[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t10-brand-drift-detector-standalone"
version = "0.2.0"
description = "Standalone t10_brand_drift_detector tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}

[project.scripts]
t10-brand-drift-detector = "run_tool:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "resolve*", "tools*"]
