[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t3-smart-reframer-standalone"
version = "0.2.0"
description = "Standalone t3_smart_reframer tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}

[project.scripts]
t3-smart-reframer = "run_tool:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "resolve*", "tools*"]
