[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t4-caption-layout-protector-standalone"
version = "0.2.0"
description = "Standalone t4_caption_layout_protector tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}

[project.scripts]
t4-caption-layout-protector = "run_tool:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "resolve*", "tools*"]
